--- a/django/academia/app/templates/app/partials/_header.html
+++ b/django/academia/app/templates/app/partials/_header.html
@@ -4,4 +4,4 @@
         <h1>{% block header_title %}Meu Site{% endblock %}</h1>
         <p>{% block header_subtitle %}Bem-vindo!{% endblock %}</p>
     </div>
-</header>
+</heade
