--- a/django/academia/app/templates/app/partials/_footer.html
+++ b/django/academia/app/templates/app/partials/_footer.html
@@ -1,14 +1,15 @@
-<!-- meuapp/templates/meuapp/partials/_footer.html -->
+<!--app/templates/app/partials/_footer.html-->
 {% load static %}
-
 <footer class="bg-dark text-white mt-5">
     <div class="container py-4">
         <div class="row">
             <!-- Seção About -->
             <div class="col-md-4">
                 <h5>Sobre Nós</h5>
-                <p>TECNOLÓOOOOOOOGYA! </p>
                 <img src="{% static 'meuapp/img/logo-white.png' %}" alt="Logo" width="120">
+                <p>Superação, disciplina e força! Juntos, evoluímos a cada treino.</p>
+                <a href="" class="text-white">Saiba Mais</a>
+
             </div>
 
             <!-- Links Rápidos -->
@@ -16,7 +17,7 @@
                 <h5>Links Úteis</h5>
                 <ul class="list-unstyled">
                     <li><a href="{% url 'home' %}" class="text-white">Home</a></li>
-                    <li><a href="{% url 'produtos' %}" class="text-white">Produtos</a></li>
+                    <li><a href="{% url 'planos' %}" class="text-white">planos</a></li>
                     <li><a href="#" class="text-white">Política de Privacidade</a></li>
                 </ul>
             </div>
