--- a/django/academia/app/templates/app/partials/navbar.html
+++ b/django/academia/app/templates/app/partials/navbar.html
@@ -10,7 +10,7 @@
                     <a class="nav-link" href="{% url 'home' %}">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="{% url 'produtos' %}">Produtos</a>
+                    <a class="nav-link" href="{% url 'planos' %}">Planos</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="{% url 'contatos' %}">Contato</a>
