--- a/academia/app/templates/app/home.html
+++ b/academia/app/templates/app/home.html
@@ -99,7 +99,7 @@
                     <div class="card-body">
                         <h5 class="card-title">FitDance</h5>
                         <p class="card-text">Pra você manja de todos os passinhos,as aulas de dança da top academica são ministradas por professores licenciados pela FitDance</p>
-                        <a href="" class="btn btn-primary mt-auto">Saiba Mais</a>
+                        <a href="{% url 'contatos' %}" class="btn btn-primary mt-auto">Saiba Mais</a>
                     </div>
                 </div>
             </div>
@@ -111,7 +111,7 @@
                     <div class="card-body">
                         <h5 class="card-title">Smart cross</h5>
                         <p class="card-text">Emagrecimento com ganho de condicionamento fisico em apenas 30 minutos? Esse é o Smart Cross, nosso treino de funcional coletivo de alta intensidade</p>
-                        <a href="" class="btn btn-primary">Saiba Mais</a>
+                        <a href="{% url 'contatos' %}" class="btn btn-primary">Saiba Mais</a>
                     </div>
                 </div>
             </div>
@@ -123,7 +123,7 @@
                     <div class="card-body">
                         <h5 class="card-title">Body Combat</h5>
                         <p class="card-text">Kungfu, Muay Thai, Jiu-Jitsu, Karate e Box são algumas das inspirações para a aulas de BodyCombat.Esse treino ainda trabalha todo corpo.</p>
-                        <a href="" class="btn btn-primary">Saiba Mais</a>
+                        <a href="{% url 'contatos' %}" class="btn btn-primary">Saiba Mais</a>
                     </div>
                 </div>
             </div>
@@ -140,7 +140,7 @@
                 <p class="lead mb-0">Junta-se a nós hoje e comece a melhorar sua qualidade de vida</p>
             </div>
             <div class="col-lg-4 text-lg-end mt-3 mt-lg-0">
-                <a href="" class="btn btn-primary btn-lg">
+                <a href="{% url 'produtos' %}" class="btn btn-primary btn-lg">
                     <i class="fas fa-calculator me-2"></i>venha fazer parte!
                 </a>
             </div>
