--- a/academia/app/templates/app/produtos.html
+++ b/academia/app/templates/app/produtos.html
@@ -10,14 +10,21 @@
     {% include 'app/partials/_header.html' %}
 {% endwith %}
 {% endwith %}
+{% load static %}
 
 <div class="container mt-4">
     <div class="row">
         {% for produto in produtos %}
-        <div class="col-md-4 mb-4">
+        <div class="col-md-2 mb-4">
             <div class="card h-100 shadow-sm">
                 <div class="card-body d-flex flex-column">
-                    <h5 class="card-title">{{ produto.nome }}</h5>
+                    <div class="d-flex justify-content-center mb-3">
+                        <img src="{{ produto.imagem.url }}" 
+                             alt="{{ produto.nome }}" 
+                             class="img-fluid rounded shadow-sm"
+                             style="height: 120px; width: 120px; object-fit: contain;" />
+                    </div>
+                    <h5 class="card-title text-center">{{ produto.nome }}</h5>
                     <p class="card-text flex-grow-1">{{ produto.descricao }}</p>
                     <div class="mt-auto">
                         <p class="text-success fw-bold mb-2">R$ {{ produto.preco }}</p>
